--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "3rdparty/Pangolin"]
 	path = 3rdparty/Pangolin
 	url = https://github.com/stevenlovegrove/Pangolin.git
+[submodule "3rdparty/fmt"]
+	path = 3rdparty/fmt
+	url = https://github.com/fmtlib/fmt.git
