--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,6 +66,7 @@
       "xtr1common": "cpp",
       "xtree": "cpp",
       "xutility": "cpp",
-      "format": "cpp"
+      "format": "cpp",
+      "bit": "cpp"
    }
 }
